--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="upper-container">
-    <button id="theme">O</button>
+    <button id="theme"></button>
     <div class="day-progress-container">
         <div id="current-date">
             <div class="weekday">Monday</div>
@@ -28,7 +28,7 @@
         </div>
     </div>
     <div class="task-input-container">
-        <input id="task-input" type="text" placeholder="Input your text!">
+        <input id="task-input" type="text" placeholder="Input your task!">
         <button id="add-task-button">Add Task</button>
     </div>
 </div>
